--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,19 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.nebula1, .nebula2 {
+	width: 300px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.nebula1 {
+	float: left;
+	padding-right: 15px;
+}
+
+.nebula2 {
+	float: right;
+	padding-left: 15px;
+}
